# scrcpy-rfb

./: CMakeLists.txt  Makefile  README.md  build-linux.sh
.github/workflows/: release.yaml
docker/: Dockerfile.builder  Dockerfile.runtime
patches/: 0001-libvncserver-don-t-busy-loop-when-deferUpdateTime-is.patch  0002-libvncserver-add-server-side-support-for-the-Open-H..patch  apply.cmake
server/: patch-scrcpy-secure.sh  su1000.c
src/: scrcpy-rfb.c
